--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@ Subscribe
 <div class="border-t border-white/20 pt-8">
 <div class="flex flex-col md:flex-row justify-between items-center gap-4">
 <p class="text-gray-300 text-sm">
-© 2024 Hope Foundation. All rights reserved.
+© 2025 CFPHFoundation. All rights reserved.
 </p>
 <div class="flex items-center space-x-6 text-sm">
 <a href="#" class="text-gray-300 hover:text-primary transition-colors">Privacy Policy</a>
