bugfix: Update logo and title in index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ Donate Now
 <div id="mobile-menu" class="mobile-menu md:hidden fixed top-0 right-0 h-full w-80 bg-white shadow-xl z-50">
 <div class="p-6">
 <div class="flex justify-between items-center mb-8">
-<span class="font-['Pacifico'] text-xl text-secondary">Hope Foundation</span>
+<img src="./assets/logo-removebg-preview (1) copy.ico" alt="" srcset="" class="h-20 w-20 mr-3 text-2xl text-white" id="mobile-nav-logo" style="margin-top: 10px;">
+<!-- <span class="font-['Pacifico'] text-xl text-secondary">Hope Foundation</span> -->
 <button id="close-menu" class="text-secondary">
 <div class="w-6 h-6 flex items-center justify-center">
 <i class="ri-close-line ri-lg"></i>
