--- a/backend/index.html
+++ b/backend/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
-    <title>Vite + React</title>
+
+    <!-- Only one favicon -->
+    <link rel="icon" type="image/x-icon" href="/src/assets/logo-removebg-preview (1) copy.ico" />
+
+    <title>CFPHFoundation Admin</title>
   </head>
   <body>
     <div id="root"></div>
