--- a/index.html
+++ b/index.html
@@ -535,33 +535,22 @@ document.addEventListener('DOMContentLoaded', function() {
       </div>
       <!-- Donation Amounts -->
       <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 sm:gap-4 mb-6 sm:mb-8">
-        <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="25">
-          <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$10</div>
-          <div class="text-xs sm:text-sm text-gray-600">community outreach</div>
-        </div>
-        <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="25">
-          <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$20</div>
-          <div class="text-xs sm:text-sm text-gray-600">Feeds 5 children</div>
-        </div>
-        <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="25">
-          <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$30</div>
-          <div class="text-xs sm:text-sm text-gray-600">Feeds 10 children</div>
-        </div>
+      
         <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="50">
           <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$50</div>
-          <div class="text-xs sm:text-sm text-gray-600">School supplies</div>
+          <!-- <div class="text-xs sm:text-sm text-gray-600">School supplies</div> -->
         </div>
         <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer selected" data-amount="100">
           <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$100</div>
-          <div class="text-xs sm:text-sm text-gray-600">Medical care</div>
+          <!-- <div class="text-xs sm:text-sm text-gray-600">Medical care</div> -->
         </div>
         <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="250">
           <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$250</div>
-          <div class="text-xs sm:text-sm text-gray-600">Clean water access</div>
+          <!-- <div class="text-xs sm:text-sm text-gray-600">Clean water access</div> -->
         </div>
         <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="500">
           <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">$500</div>
-          <div class="text-xs sm:text-sm text-gray-600">Community support</div>
+          <!-- <div class="text-xs sm:text-sm text-gray-600">Community support</div> -->
         </div>
         <div class="donation-card bg-white border rounded-lg sm:rounded-xl p-3 sm:p-4 text-center cursor-pointer" data-amount="500" id="custom-amount-card">
           <div class="text-lg sm:text-xl md:text-2xl font-bold text-primary donation-amount">Custom</div>
