--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <meta name="author" content="Celebrity Food Home Pantry Foundation">
 <meta name="robots" content="index, follow">
 <link rel="stylesheet" href="./page/style.css">
+
+<link rel="icon" type="image/x-icon" href="./assets/logo-removebg-preview (1) copy.ico">
+<link rel="shortcut icon" href="./assets/logo-removebg-preview (1) copy.ico">
+<link rel="icon" type="image/png" href="./assets/logo-removebg-preview (1) copy.ico" sizes="32x32">
+<link rel="apple-touch-icon" href="./assets/logo-removebg-preview (1) copy.ico">
+<meta name="theme-color" content="#10b981">
     
 <!-- Canonical URL to avoid duplicate content issues -->
 <link rel="canonical" href="https://cfphfoundation.org">
@@ -2028,6 +2034,7 @@ document.addEventListener('DOMContentLoaded', function () {
 </div>
 
 <script src="./js/chatbot.js" defer></script>
+<script src="./js/newsletter.js" type="module"></script>
 
 </body>
 </html>
