--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TVGP3Q55');</script>
+<!-- End Google Tag Manager -->
+<!-- JSON-LD Structured Data -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Celebrity Food Home Pantry Foundation - Fighting Hunger, Building Communities</title>
 <script src="https://cdn.tailwindcss.com/3.4.16"></script>
@@ -41,7 +48,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1079448428096344" crossorigin="anonymous"></script>
+<!-- Google Tag Manager -->
 
+<!-- End Google Tag Manager -->
 <!-- JSON-LD Structured Data -->
 <script type="application/ld+json">
 {
@@ -232,6 +241,10 @@ tailwind.config = {
 </script>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVGP3Q55"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- loader overlay (insert right after <body> opens) -->
 <div id="site-loader" class="fixed inset-0 z-[9999] flex items-center justify-center bg-white">
   <div class="text-center">
