--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="keywords" content="food pantry, charity Nigeria, hunger relief, food donation, community outreach, volunteer opportunities, Lagos charity">
 <meta name="author" content="Celebrity Food Home Pantry Foundation">
 <meta name="robots" content="index, follow">
+<meta name="keywords" content="CFPHFoundation, CFPH Foundation, NGO in Lagos, food pantry Lagos, donate Lagos">
+<link rel="canonical" href="https://cfphfoundation.org/">
 <link rel="stylesheet" href="./page/style.css">
 
 <link rel="icon" type="image/x-icon" href="./assets/logo-removebg-preview (1) copy.ico">
@@ -63,29 +65,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "NGO",
+  "@type": "Organization",
   "name": "Celebrity Food Home Pantry Foundation",
-  "url": "https://www.cfphfoundation.org",
-  "logo": "https://cfphfoundation.orgassets/logo-removebg-preview (1) copy.ico",
-  "description": "Providing food assistance and community support programs to fight hunger in Nigeria.",
+  "alternateName": "CFPHFoundation",
+  "url": "https://cfphfoundation.org",
+  "logo": "https://cfphfoundation.org/assets/logo-removebg-preview (1) copy.ico",
+  "sameAs": [
+    "https://facebook.com/CFPHFoundation",
+    "https://instagram.com/CFPHFoundation",
+    "https://twitter.com/CFPHFoundation"
+  ],
+  "contactPoint": [
+    {
+      "@type": "ContactPoint",
+      "telephone": "+2348084009711",
+      "contactType": "customer service",
+      "areaServed": "NG",
+      "availableLanguage": ["English"]
+    }
+  ],
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "No 20 Olusanya Street, Jesugbami",
-    "addressLocality": "Aboru",
-    "addressRegion": "Lagos",
-    "addressCountry": "Nigeria"
+    "streetAddress": "No 20 Olusanya Street, Jesugbami, Aboru",
+    "addressLocality": "Lagos",
+    "addressRegion": "Lagos State",
+    "postalCode": "",
+    "addressCountry": "NG"
   },
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+234-808-400-9711",
-    "contactType": "Customer service",
-    "email": "celebrityfoodpantry@gmail.com"
-  },
-  "sameAs": [
-    "https://www.facebook.com/cfphfoundation",
-    "https://www.twitter.com/cfphfoundation",
-    "https://www.instagram.com/cfphfoundation"
-  ]
+  "description": "Celebrity Food Home Pantry Foundation (CFPHFoundation) — a non-profit fighting hunger and building communities in Lagos, Nigeria."
 }
 </script>
     
